# Tidy

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.forge/: mcp-architecture.html
.forge/ui-mockups/: board.html  editor.html  meeting.html
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/db/: migrations.rs  mod.rs
crates/core/src/llm/: mod.rs  ollama.rs
crates/core/src/store/: databases.rs  documents.rs  ingest.rs  knowledge.rs  mod.rs  pages.rs  search.rs
crates/core/src/vault/: export.rs  mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
scripts/: build-sidecar.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: mic.rs  mod.rs  pipeline.rs  recorder.rs  system.rs
src-tauri/src/commands/: ai.rs  databases.rs  documents.rs  ingest.rs  knowledge.rs  mcp.rs  mod.rs  pages.rs  recording.rs  search.rs
src-tauri/src/vault/: mod.rs
src-tauri/src/whisper/: diarize.rs  mod.rs  models.rs  transcribe.rs
src/components/: PageRouter.tsx
src/components/db/: AddFieldPopover.tsx  BoardView.tsx  CalendarView.tsx  DatabaseView.tsx  DbToolbar.tsx  EditableCell.tsx  GanttView.tsx  GridView.tsx  RelationCell.tsx  calendar.css  cells.tsx
src/components/editor/: Editor.tsx  PageHeader.tsx  editor.css
src/components/graph/: GraphView.tsx
src/components/help/: FeatureTip.tsx  ShortcutsSheet.tsx
src/components/home/: HomeDashboard.tsx
src/components/ingest/: IngestDialog.tsx
src/components/knowledge/: BacklinksPanel.tsx
src/components/layout/: AppShell.tsx  ContentPane.tsx  Sidebar.tsx  Splitter.tsx  TopBar.tsx
src/components/planner/: PlannerView.tsx  TaskRow.tsx
src/components/search/: CommandPalette.tsx
src/components/sidebar/: PageTree.tsx  PageTreeItem.tsx
src/components/ui/: button.tsx
src/features/ai/: AiAssist.tsx
src/features/export/: pageExport.ts
src/features/meeting/: MeetingRecorder.tsx  meetingDoc.ts  useMeetingFlow.ts
src/features/meeting/__tests__/: assignSpeakers.test.ts  meetingDoc.test.ts
src/features/settings/: SettingsView.tsx
src/hooks/: useAgenda.ts  useDatabase.ts  useDocument.ts  useModels.ts  usePageLinks.ts  usePages.ts  useTaskMutations.ts
src/lib/: agenda.ts  api.ts  blocksMarkdown.ts  computed.ts  dbFilters.ts  gantt.ts  graph.ts  queryClient.ts  tauri.ts  theme.ts  utils.ts  wikilinks.ts
src/lib/__tests__/: agenda.test.ts  blocksMarkdown.test.ts  buildTree.test.ts  computed.test.ts  dbFilters.test.ts  gantt.test.ts  graph.test.ts  wikilinks.test.ts
src/lib/mock/: backend.ts
src/store/: ui.ts
